RESOLVED FIXED199457
[ContentChangeObserver] REGRESSION (r244356): Drop down menus collapse without user input - Ebay.com
https://bugs.webkit.org/show_bug.cgi?id=199457
Summary [ContentChangeObserver] REGRESSION (r244356): Drop down menus collapse withou...
alan
Reported 2019-07-03 10:55:13 PDT
1. go to ebay.com 2. search for anything 3. tap “Conditions” or “Delivery Options”
Attachments
Patch (12.34 KB, patch)
2019-07-03 11:12 PDT, alan
no flags
Patch (13.57 KB, patch)
2019-07-03 12:05 PDT, alan
no flags
alan
Comment 1 2019-07-03 10:55:32 PDT
alan
Comment 2 2019-07-03 11:12:29 PDT
alan
Comment 3 2019-07-03 12:05:26 PDT
WebKit Commit Bot
Comment 4 2019-07-03 12:53:13 PDT
Comment on attachment 373404 [details] Patch Clearing flags on attachment: 373404 Committed r247098: <https://trac.webkit.org/changeset/247098>
WebKit Commit Bot
Comment 5 2019-07-03 12:53:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.